--- a/task12webserver/templates/user.html
+++ b/task12webserver/templates/user.html
@@ -7,11 +7,11 @@
 <body>
 
 <form action="/user" method="POST">
-    <p>id: <input type="hidden" name="id"  value = ${id}></p>
-    <p>Name: <input type="text" name="name"  value = "${name}"></p>
-    <p>Age: <input type="text" name="age"  value = ${age}></p>
-    <p>Address <input type="text" name="address"  value = "${address}"></p>
-    <p>Phone <input type="text" multiple="multiple" name="phone"  value = ${phone}></p>
+    <p>id: <input type="hidden" name="id"  value = ${user.id}></p>
+    <p>Name: <input type="text" name="name"  value = "${user.name!}"></p>
+    <p>Age: <input type="text" name="age"  value = ${user.age!}></p>
+    <p>Address <input type="text" name="address"  value = "${user.getAddress()!}"></p>
+    <p>Phone <input type="text" multiple="multiple" name="phone"  value = ${user.printPhoneList()!}></p>
     <input type="submit" value="Save user">
 </form>
 
