--- a/task14war/src/main/resources/templates/user.html
+++ b/task14war/src/main/resources/templates/user.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="/user" method="POST">
+<form action="user" method="POST">
     <p>id: <input type="hidden" name="id"  value = ${user.id}></p>
     <p>Name: <input type="text" name="name"  value = "${user.name!}"></p>
     <p>Age: <input type="text" name="age"  value = ${user.age!}></p>
